# peft-playground

./: .gitmodules  pyproject.toml
conf/: config.yaml
conf/finetune_dataset/: common_sense.yaml  math.yaml
conf/model/: llama.yaml
conf/training/: common_sense.yaml
notebooks/: scratch.ipynb
peft_play/: data.py  utils.py
scripts/: train.py
