[tool.poetry]
name = "peft-play"
version = "0.1.0"
description = ""
authors = ["Stephen Chen <stephen.chen@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.5.1"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
peft = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
